data/derived/fa15/progs/unify/prog0503.ml.out
Characters 56-58:
  (f b) = b in f'),b);;
               ^^
Error: This expression has type ('a -> 'a) -> 'a -> bool
       but an expression was expected of type ('a -> 'a) -> ('a -> 'a) * bool
       Type 'a -> bool is not compatible with type ('a -> 'a) * bool 
